# ML-Lab

./: .gitignore  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_PROGRESS.md  LICENSE  PHASE_2_2_COMPLETE.md  PHASE_4_COMPLETE.md  README.md  pyproject.toml  requirements.txt  test_integration_verify.py
src/: main.py
src/core/: data_preparation.py  dataset.py  encoding_models.py
src/helpers/: __init__.py  path_converter.py
src/ui/: data_science.py  data_visualization.py  dataset_explorer.py  home.py  layout.py  model_factory.py
src/ui/charts/: __init__.py  barchart.py  base.py  boxplot.py  heatmap.py  histogram.py  piechart.py  scatter.py
src/ui/models/: __init__.py  adaboost.py  affinity_propagation.py  base_model.py  bernoulli_naive_bayes.py  birch.py  catboost_model.py  categorical_naive_bayes.py  complement_naive_bayes.py  dbscan.py  decision_tree.py  decision_tree_regressor.py  elastic_net.py  elbow_locator.py  extra_trees.py  gaussian_mixture.py  gaussian_naive_bayes.py  gradient_boosting.py  hdbscan.py  hierarchical_clustering.py  kmeans.py  knn.py  lasso.py  lightgbm_model.py  linear_regression.py  logistic_regression.py  mean_shift.py  minibatch_kmeans.py  mlp.py  multinomial_naive_bayes.py  optics.py  random_forest.py  ridge.py  sgd.py  spectral_clustering.py  svm.py  xgboost_model.py
src/utils/: dataset.py  model_utils.py
tests/: __init__.py  conftest.py  test_model_utils.py  test_models.py
tests/integration/: test_backward_compatibility.py  test_model_training_with_categorical.py
tests/unit/: test_categorical_encoding.py  test_pipeline_integration.py
