[project]
name = "machine-learning-model-fit-and-evaluation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet[all]==0.28.3",
  "imbalanced-learn>=0.12.4",
  "matplotlib>=3.9.4",
  "pandas>=2.3.3",
  "plotly>=6.4.0",
  "scikit-learn>=1.6.1",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.farshadz"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "machine-learning-model-fit-and-evaluation"

# company name to display in about app dialogs
company = "Farshadz"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Farshad Zargari"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
