[project]
name = "ML-Lab"
version = "0.1.0"
description = "An application to help Data scientists for visualization and testing models faster without coding"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Farshad Zargari", email = "farshadzargary1997@gmail.com" }
]
dependencies = [
  "flet[all]==0.28.3",
  "kneed>=0.8.5",
  "matplotlib>=3.9.4",
  "pandas>=2.3.3",
  "scikit-learn>=1.6.1",
  "seaborn>=0.13.2",
  "setuptools>=80.9.0",
  "ydata-profiling>=4.17.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.farshadz"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "ML-Lab"

# company name to display in about app dialogs
company = "Farshadz"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Farshad Zargari"

[tool.flet.app]
path = "src"

# [tool.uv] # deprecated
# dev-dependencies = ["flet[all]==0.28.3"]

[dependency-groups]
dev = [
  "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
